# ProcessoFAPESP2018_19046-4

./: README.md  clusterRunningTutorial.txt
Geant4Parameter/: CMakeCache.txt  Makefile  README.txt  cmake_install.cmake  meuScript.sh  vis.mac
Geant4Parameter/Teste/: CMakeLists.txt  Teste.cc
Geant4Parameter/Teste-build/: energyDepStep.root  energyLossMean.c  ionizationMean.c  lerEnergyDep.C  lerParticles.C  lerParticlesEventNum.C
Geant4Parameter/Teste/include/: HelmholtzHit.hh  HelmholtzSD.hh  TesteActionInitialization.hh  TesteDetectorConstruction.hh  TesteEventAction.hh  TesteMagneticField.hh  TestePhysicsList.hh  TestePrimaryGeneratorAction.hh  TesteRegionInformation.hh  TesteRootAnalysis.hh  TesteRunAction.hh  TesteSteppingAction.hh
Geant4Parameter/Teste/src/: HelmholtzHit.cc  HelmholtzSD.cc  TesteActionInitialization.cc  TesteDetectorConstruction.cc  TesteEventAction.cc  TesteMagneticField.cc  TestePhysicsList.cc  TestePrimaryGeneratorAction.cc  TesteRegionInformation.cc  TesteRootAnalysis.cc  TesteRunAction.cc  TesteSteppingAction.cc
Particles/0.25T/10cm/ArCO2_70-30/: particles_2.0GeV_0.25T_10cm.root  particles_2.7GeV_0.25T_10cm.root  particles_3.0GeV_0.25T_10cm.root  particles_3.4GeV_0.25T_10cm.root  particles_4.8GeV_0.25T_10cm.root  particles_5.0GeV_0.25T_10cm.root
Particles/0.25T/15cm/ArCO2_70-30/: particles_2.3GeV_0.25T_15cm.root  particles_2.6GeV_0.25T_15cm.root  particles_3.1GeV_0.25T_15cm.root  particles_3.2GeV_0.25T_15cm.root  particles_3.7GeV_0.25T_15cm.root  particles_4.3GeV_0.25T_15cm.root  particles_4.7GeV_0.25T_15cm.root  particles_4.9GeV_0.25T_15cm.root
Particles/0.25T/20cm/ArCO2_70-30/: particles_2.5GeV_0.25T_20cm.root  particles_4.0GeV_0.25T_20cm.root  particles_4.1GeV_0.25T_20cm.root  particles_4.6GeV_0.25T_20cm.root  particles_5.0GeV_0.25T_20cm.root
Particles/0.5T/10cm/ArCH4_70-30/: particles_2.3GeV_0.5T_10cm.root  particles_3.0GeV_0.5T_10cm.root  particles_3.1GeV_0.5T_10cm.root  particles_3.4GeV_0.5T_10cm.root  particles_4.4GeV_0.5T_10cm.root
Particles/0.5T/10cm/ArCO2_70-30/: particles_2.0GeV_0.5T_10cm.root  particles_3.7GeV_0.5T_10cm.root  particles_4.3GeV_0.5T_10cm.root
Particles/0.5T/10cm/XeCO2_90-10/: particles_2.5GeV_0.5T_10cm.root  particles_3.1GeV_0.5T_10cm.root  (+1 more)
enviar_ArCH4/: README.txt  gem.C  jobZero.sh  meuJobArray.sh  nEntries.C  submeteMeuJobArray.sh
enviar_ArCO2_primeiro/: gem  gem.C  meuJobArray.sh  nEntries.C  submeteMeuJobArray.sh
enviar_ArCO2_seed/: README.txt  gem.C  meuJobArray.sh  nEntries.C  submeteMeuJobArray.sh
enviar_ArCO2_seed/thgem/: mesh.boundary  mesh.header
enviar_ArCO2_segundo/: gem.C  meuJobArray.sh  nEntries.C  submeteMeuJobArray.sh
enviar_primeiro_XeCO2/: gem.C  makefile  meuJobArray.sh  nEntries.C
enviar_primeiro_XeCO2/thgem/: entities.sif
enviar_segundo_XeCO2/: gem.C  meuJobArray.sh  nEntries.C  submeteMeuJobArray.sh
enviar_segundo_XeCO2/thgem/: mesh.names  netgen.prof
receber_titanio/: lerResultEventNum.C  readme.txt  resultAnalysis2.C
receber_titanio/Campo magnético/: ajusteLinear.py  myGraph.C  myGraphDivide.C
receber_titanio/Composição gasosa/: myGraph.C
receber_titanio/Tamanho/: ajusteLinear.py  myGraph.C  myGraphDivide.C
(+12399 files in other folders)
